// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Pages"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="directory.pageList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Pages"
        id="directory.pageList.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="directory.pageList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Pages"
        id="directory.pageList.title"
        values={Object {}}
      />
    }
  >
    <PlusButton
      hideOnDesktop={false}
      id="createPageDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{length} {length, plural,one {Block} other {Blocks}}"
            id="directory.pageList.blocks"
            values={
              Object {
                "length": 8,
              }
            }
          />
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              12 days ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              firstName lastName
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <styled.div>
          <styled.div>
            <Styled(H1)
              customStyles={
                Object {
                  "cursor": "pointer",
                }
              }
              id="pageTitle-0"
              onClick={[Function]}
            />
            <styled.div
              onClick={[Function]}
            >
              <P
                id="pageDescription-0"
              >
                description
              </P>
            </styled.div>
          </styled.div>
          <Styled(Span)
            onClick={[Function]}
          >
            Edit Page
          </Styled(Span)>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={false}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      hideOnDesktop={true}
      id="createPageBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;

exports[`PageList: Component should render correctly with loader 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Pages"
  />
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="directory.pageList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Pages"
        id="directory.pageList.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="directory.pageList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Pages"
        id="directory.pageList.title"
        values={Object {}}
      />
    }
  >
    <PlusButton
      hideOnDesktop={false}
      id="createPageDesktopBtn"
      onClick={[Function]}
    />
  </ContextHeader>
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={null}
  >
    <styled.section>
      <Styled(Component)
        footerComponent={
          <FormattedMessage
            defaultMessage="{length} {length, plural,one {Block} other {Blocks}}"
            id="directory.pageList.blocks"
            values={
              Object {
                "length": 8,
              }
            }
          />
        }
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              12 days ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              firstName lastName
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <styled.div>
          <styled.div>
            <Styled(H1)
              customStyles={
                Object {
                  "cursor": "pointer",
                }
              }
              id="pageTitle-0"
              onClick={[Function]}
            />
            <styled.div
              onClick={[Function]}
            >
              <P
                id="pageDescription-0"
              >
                description
              </P>
            </styled.div>
          </styled.div>
          <Styled(Span)
            onClick={[Function]}
          >
            Edit Page
          </Styled(Span)>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <NavigationContainer
    hideOnDesktop={false}
    right={false}
  >
    <BackArrowButton
      id="backBtn"
      onClick={[Function]}
    />
    <PlusButton
      hideOnDesktop={true}
      id="createPageBtn"
      onClick={[Function]}
    />
  </NavigationContainer>
</styled.div>
`;
